--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,14 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.7.1",
-    "requests>=2.32.4",
 ]
 
 [dependency-groups]
 dev = [
   "pytest",
+  "pytest-cov",
+  "ruff",
+  "mypy",
   "black",
 ]
 
